retrieve_ENO_DEV1/objects/Financial_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Annual_Non_VAT__c</fullName>
        <label>Annual Non VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gift_Aid_Percent__c</fullName>
        <label>Gift Aid Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Value__c</fullName>
        <label>VAT Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Financial Settings</label>
</CustomObject>